# somaafrica

./: .coveragerc  .flake8  .gitignore  README.md  compose.yml  manage.py  pyproject.poetry.toml  pyproject.setuptools.toml  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: somaafrica.yml
requirements/: base.txt  tests.txt
somaafrica/: admin.py  asgi.py  models.py  wsgi.py
somaafrica/commons/: admin.py  apps.py  authentication_backends.py  forms.py  models.py  phone_validator.py  serializer.py  tests.py  urls.py  validator.py  views.py
somaafrica/configs/: authentication.py  logging.py  settings.py  urls.py
somaafrica/persons/: admin.py  apps.py  models.py  serializer.py  serializers.py  urls.py  views.py
somaafrica/persons/fixtures/: auth_fixture.json  persons_fixture.json
tests/: settings.py  test_dummy.py  test_settings.py
tests/commons/: test_authentication_backends.py
tests/persons/: test_apihealth.py
tests/persons/person/: test_person.py
tests/persons/user/: crud.py  setupdata.py  signout_jwt_pytes.py  signup_pytes.py  test_change_password.py  test_delete_user.py  test_generate_tokens.py  test_group.py  test_list_users.py  test_login.py  test_logout_jwt.py  test_password_reset.py  test_permission.py  test_refresh_token.py  test_signup.py  test_user.py  test_user_detail.py  test_user_list_and_detail.py  user_detail_pytes.py
tests/utils/: api_crud_tests.py
